Remving extra space at top. This will have to be corrected in some repos while not in others

--- a/src/styles/base/base.css
+++ b/src/styles/base/base.css
@@ -35,8 +35,7 @@
   justify-content: center;
 }
 .formidableHeader-container {
-  /* height: 275px; */
-  margin: 3em auto 0;
+  margin: 0 auto;
   padding: 60px 0 30px;
 }
 
